src/snapshots/workbridge__ui__snapshot_tests__panel_title_shows_item_count.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Work Items (3) ───────┐┌ Claude Code ────────────────────────────────────────┐
│  ACTIVE (1)           ││                                                     │
│> [IM] Second item     ││  Second item                                        │
│  Branch: branch-b     ││                                                     │
│  Repo: 0 [no wt]      ││  Status      Implementing                           │
│  BACKLOGGED (2)       ││  Backend     Local file                             │
│  [BL] First item      ││  Repo        /repo/b/0                              │
│  Branch: branch-a     ││  Branch      branch-b                               │
│  Repo: 0 [no wt]      ││  Worktree    (none)                                 │
│  [BL] Third item      ││  PR          (none)                                 │
│  Branch: branch-c     ││  Issue       (none)                                 │
│  Repo: 0 [no wt]      ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  Press Enter to start a session.                    │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Second item | [Implementing] | /repo/b/0
