src/snapshots/workbridge__ui__snapshot_tests__right_panel_focused.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Tabs ────────────┐┌ Claude Code [INPUT] ─────────────────────────────────────┐
│>  Tab 0          ││█                                                         │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
