src/snapshots/workbridge__ui__snapshot_tests__right_panel_focused_with_session.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Work Items ───────────┐┌ Claude Code [INPUT] ────────────────────────────────┐
│>   [BL] Fix authenti..││                                                     │
│    [BL] branch-todo-1 ││  Fix authentication bug                             │
│      (0) [no wt]      ││                                                     │
│                       ││  Status      Backlog                                │
│                       ││  Backend     Local file                             │
│                       ││  Repo        /repo/todo-1/0                         │
│                       ││  Branch      branch-todo-1                          │
│                       ││  Worktree    (none)                                 │
│                       ││  PR          (none)                                 │
│                       ││  Issue       (none)                                 │
│                       ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  Press Enter to start a session.                    │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Fix authentication bug | [Backlog] | /repo/todo-1/0
