src/snapshots/workbridge__ui__snapshot_tests__settings_overlay_with_config.snap
---
source: src/ui.rs
expression: output
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Session ────────────────────────────────────────────┐
│           ┌ Settings (press ? or Esc to close) ──────────────────┐           │
│  No work i│                                                      │           │
│           │   Repos  |  Review Gate  |  Keybindings              │           │
│  Ctrl+N: q│ Config source:                                       │           │
│  Ctrl+B: b│   in-memory (test)                                   │           │
│           │ Base directories:                                    │           │
│           │   + /tmp/workbridge-test-settings-overlay            │           │
│           │                                                      │           │
│           │ ┌ Managed repos (2) ─────┐┌ Available (1) ─────────┐ │           │
│           │ │>  - /root/Forks/special││ + /tmp/workbridge-test-│ │           │
│           │ │   + /tmp/workbridge-tes││                        │ │           │
│           │ └────────────────────────┘└────────────────────────┘ │           │
│           │                                                      │           │
│           │ Defaults:                                            │           │
│           │   worktree_dir: .worktrees                           │           │
│           │   branch_issue_pattern: ^(\d+)-                      │           │
│           │ Tab: switch tab   Left/Right: switch column   Enter: │           │
│           │                                                      │           │
│           └──────────────────────────────────────────────────────┘           │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
