src/snapshots/workbridge__ui__snapshot_tests__single_tab_selected.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Tabs ────────────┐┌ Claude Code ─────────────────────────────────────────────┐
│>  Tab 0          ││█                                                         │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
