src/snapshots/workbridge__ui__snapshot_tests__tab_with_dead_session.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Tabs ────────────┐┌ Claude Code ─────────────────────────────────────────────┐
│   Tab 0          ││                                                          │
│>  Tab 1 [dead]   ││  Session has ended.                                      │
│                  ││                                                          │
│                  ││  Press Ctrl+D or Delete                                  │
│                  ││  to remove this tab.                                     │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
