src/snapshots/workbridge__ui__snapshot_tests__tab_with_work_item_context.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Tabs ────────────┐┌ Claude Code ─────────────────────────────────────────────┐
│>  Tab 0          ││█                                                         │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Fix resize bug | ~/Projects/myapp | bug, P1
